# geo

./: COPYING  Makefile.am  NEWS  NEWS.1  README  configure.ac  geo-fallback.el  geo-ip.el  geo-nm.el  geo-solar.el  geo-xdg-solar.el  geo-xdg.el  geo.el  manual.org
geocode-glib/: AUTHORS  NEWS  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac
geocode-glib/src/: Makefile.am  config.h.in  geocode-emacs.c  geocode.el
lisp-src/: Makefile.am  compload.el  geo-fallback.el  geo-ip.el  geo-nm.el  geo-simulate.el  geo-solar.el  geo-xdg-solar.el  geo-xdg.el  geo.el
